# rust-app

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-09ddbe3f91bac14c78aa69ae4814fd03d9f8620c07d09c0c0027bb87119e8ad5.json  query-28bc7ae457072cbbe338bb3b53800e8444bd38d9dee85d8ce970a1e8ebe1e397.json
migrations/: 20240701130150_todos.sql
src/: main.rs
src/dtos/: todo.rs
src/handlers/: todo.rs
src/schemas/: todo.rs
src/services/: todo.rs
