[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
